Adding more search features

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,9 @@ theme:
     - navigation.sections
     - toc.integrate
     - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
   language: en
   palette:
     - scheme: default
