--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,10 @@ site_name: MkDocs Tutorial Documentation
 nav:
   - Home: index.md
   - Page-2: page2.md
+  - Fossid : Fossid.md
+  - Publishing File: Publish-a-File.md
+  - ROS: ROS.md
+  - Sonarqube: Sonarqube.md
 
 site_author: Mohammed Abdullah
 site_description: >-
