--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,7 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode    
-      primary: teal
+      primary: purple
       accent: lime
 
 extra:
