--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,6 @@ nav:
   - Inegration :
       - ROS: ROS.md
       - Sonarqube: Sonarqube.md
-  - Troubleshooting :
       
 site_author: Mohammed Abdullah
 site_description: >-
@@ -36,12 +35,12 @@ theme:
         icon: material/toggle-switch-off-outline 
         name: Switch to dark mode
       primary: purple
-      accent: purple 
+      accent: purple
     - scheme: slate 
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode    
-      primary: purple
+      primary: black
       accent: lime
 
 extra:
@@ -71,4 +70,4 @@ plugins:
   - search
 
 copyright: |
-  &copy; 2023 <a href="https://github.com/james-willett"  target="_blank" rel="noopener">James Willett</a>
+  &copy; 2023 <a href="https://github.com/mhd8a"  target="_blank" rel="noopener"> Mohammed</a>
