--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: Knowledge Base Doumentation
 nav:
   - Home: Home.md
   - Fossid: Fossid.md
-  - Publish a File: Publish a File.md
+  - Publish a File: Publish-a-File.md
   - Inegration :
       - ROS: ROS.md
       - Sonarqube: Sonarqube.md
