--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ site_description: >-
 
 # Configuration
 theme:
+  custom_dir: custom_template
   name: material
   features:
     - navigation.tabs
