--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,11 +43,11 @@ theme:
         name: Switch to light mode    
       primary: black
       accent: lime
-
+<!--
 extra:
   social:
     - icon: fontawesome/brands/github-alt
-      link: https://github.com/james-willett
+      link: https://github.com/james-willett -->
 
 extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js #?features=es6
